# walletpair

./: .gitignore  .mcp.json  LICENSE  README.md  readme.md  security-audit-brief.md  walletpair-evm-subprotocol-v1.md  walletpair-protocol-v1-guide.md  walletpair-protocol-v1-original.md  walletpair-protocol-v1-rationale.md  walletpair-protocol-v1.md
.claude/: settings.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  release-extension.yml  release-relay.yml
agent-rules/: AI-CODING-RULES.md  CLAUDE-AUTO-TEST.md  LAUNCH_AUDIT.md  SECURITY-AUDIT.md
docs/project-takeover/: 01-system-overview.md  02-local-development.md  03-core-flows.md  04-production-readiness.md  05-deployment-runbook.md  06-operations-runbook.md  07-maintenance-guide.md  08-open-issues.md  README.md
formal-verification/: README.md  encryption.pv  walletpair-v1.pv
protocols/: encryption.md  ethereum.md  relay.md
scripts/: stability-check.sh
walletpair-examples/: dapp.html
walletpair-examples/wallet/: app.json  package-lock.json  package.json
walletpair-examples/webapp/: README.md  package.json  pnpm-lock.yaml
walletpair-extension/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts  wxt.config.ts
walletpair-extension/e2e/: dapp-e2e.html  extension.e2e.ts  full-flow.e2e.ts  run-cycles.sh  serve.ts  wallet-e2e.html
walletpair-relay/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  compose.yaml
walletpair-relay/src/: main.rs
walletpair-sdk/: CHANGELOG.md  README.md  cycle-test.sh  package.json
walletpair-sdk/.changeset/: missing-tx-chainid.md  remove-bluetooth-transport.md
walletpair-websocket-relay/: .gitignore  Cargo.toml  README.md  VALIDATION_REPORT.md  config.example.toml
walletpair-websocket-relay-cf-worker/: README.md  package-lock.json  package.json  wrangler.jsonc
walletpair-websocket-relay/fuzz/: Cargo.toml  README.md
walletpair-websocket-relay/fuzz/corpus/fuzz_parse_message/: accept.json  close.json  create.json  evt.json  join.json  join_null.json  ping.json  pong.json  ready.json  req.json  res.json  terminate.json  wrong_version.json
walletpair-websocket-relay/fuzz/fuzz_targets/: fuzz_parse_message.rs  fuzz_relay_handler.rs  fuzz_state_machine.rs
walletpair-websocket-relay/src/: config.rs  http.rs  lib.rs  main.rs  metrics.rs  persist.rs  protocol.rs  relay.rs  session.rs  shutdown.rs  state.rs  store.rs
walletpair-websocket-relay/tests/: integration.rs  reliability.rs
walletpair.org/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
(+174 files in other folders)
