[package]
name = "walletpair-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
