[package]
name = "walletpair-websocket-relay-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dependencies.walletpair-websocket-relay]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_parse_message"
path = "fuzz_targets/fuzz_parse_message.rs"
doc = false

[[bin]]
name = "fuzz_state_machine"
path = "fuzz_targets/fuzz_state_machine.rs"
doc = false

[[bin]]
name = "fuzz_relay_handler"
path = "fuzz_targets/fuzz_relay_handler.rs"
doc = false
